[tool.poetry]
name = "posterization"
version = "0.1.0"
description = ""
authors = ["Ted Chao <cchao8@gmu.edu>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18"
gco-wrapper = "^3.0.3"
pillow = "^7.2.0"
scipy = "^1.5.2"
cvxopt = "^1.2.5"
scikit-image = "^0.17.2"
scikit-learn = "^0.23.2"
opencv-python = "^4.4.0"
pypotrace = "^0.2"
cairocffi = "^1.2.0"
pycairo = "^1.20.0"
autograd = "^1.3"
numba = "^0.51.2"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
